# library-manager

./: CMakeLists.txt  README.md  add_book_dialog.ui  addbookdialog.cpp  addbookdialog.h  addbookdialog.ui  book.cpp  book.h  dbhandler.cpp  dbhandler.h  library.cpp  library.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h
